[gd_scene load_steps=130 format=2]

[ext_resource path="res://asset/player/png/Idle__006.png" type="Texture" id=1]
[ext_resource path="res://asset/player/png/Idle__005.png" type="Texture" id=2]
[ext_resource path="res://asset/player/png/Idle__004.png" type="Texture" id=3]
[ext_resource path="res://asset/player/png/Idle__001.png" type="Texture" id=4]
[ext_resource path="res://asset/player/png/Idle__003.png" type="Texture" id=5]
[ext_resource path="res://asset/player/png/Idle__002.png" type="Texture" id=6]
[ext_resource path="res://asset/player/png/Idle__000.png" type="Texture" id=7]
[ext_resource path="res://asset/player/png/Idle__007.png" type="Texture" id=8]
[ext_resource path="res://asset/player/png/Idle__008.png" type="Texture" id=9]
[ext_resource path="res://asset/player/png/Idle__009.png" type="Texture" id=10]
[ext_resource path="res://asset/player/png/Jump__003.png" type="Texture" id=11]
[ext_resource path="res://asset/player/png/Jump__000.png" type="Texture" id=12]
[ext_resource path="res://asset/player/png/Run__005.png" type="Texture" id=13]
[ext_resource path="res://asset/player/png/Run__002.png" type="Texture" id=14]
[ext_resource path="res://asset/player/png/Jump__001.png" type="Texture" id=15]
[ext_resource path="res://asset/player/png/Run__003.png" type="Texture" id=16]
[ext_resource path="res://asset/player/png/Run__004.png" type="Texture" id=17]
[ext_resource path="res://asset/player/png/Run__001.png" type="Texture" id=18]
[ext_resource path="res://asset/player/png/Run__000.png" type="Texture" id=19]
[ext_resource path="res://asset/player/png/Jump__002.png" type="Texture" id=20]
[ext_resource path="res://asset/player/png/Run__006.png" type="Texture" id=21]
[ext_resource path="res://asset/player/png/Jump__004.png" type="Texture" id=22]
[ext_resource path="res://asset/player/png/Run__008.png" type="Texture" id=23]
[ext_resource path="res://asset/player/png/Run__007.png" type="Texture" id=24]
[ext_resource path="res://asset/player/png/Run__009.png" type="Texture" id=25]
[ext_resource path="res://asset/player/png/Jump__005.png" type="Texture" id=26]
[ext_resource path="res://asset/player/png/Jump__007.png" type="Texture" id=27]
[ext_resource path="res://asset/player/png/Jump__008.png" type="Texture" id=28]
[ext_resource path="res://asset/player/png/Jump__009.png" type="Texture" id=29]
[ext_resource path="res://asset/player/png/Jump__006.png" type="Texture" id=30]
[ext_resource path="res://asset/player/png/Attack__000.png" type="Texture" id=31]
[ext_resource path="res://asset/player/png/Attack__003.png" type="Texture" id=32]
[ext_resource path="res://asset/player/png/Attack__001.png" type="Texture" id=33]
[ext_resource path="res://asset/player/png/Attack__002.png" type="Texture" id=34]
[ext_resource path="res://asset/player/png/Attack__004.png" type="Texture" id=35]
[ext_resource path="res://asset/player/png/Attack__005.png" type="Texture" id=36]
[ext_resource path="res://asset/player/png/Attack__006.png" type="Texture" id=37]
[ext_resource path="res://asset/player/png/Attack__007.png" type="Texture" id=38]
[ext_resource path="res://asset/player/png/Attack__008.png" type="Texture" id=39]
[ext_resource path="res://asset/player/png/Attack__009.png" type="Texture" id=40]
[ext_resource path="res://src/Actor/Player/Player.gd" type="Script" id=41]
[ext_resource path="res://asset/player/png/Jump_Attack__009.png" type="Texture" id=42]
[ext_resource path="res://asset/player/png/Jump_Attack__006.png" type="Texture" id=43]
[ext_resource path="res://asset/player/png/Jump_Attack__005.png" type="Texture" id=44]
[ext_resource path="res://asset/player/png/Jump_Attack__007.png" type="Texture" id=45]
[ext_resource path="res://asset/player/png/Jump_Attack__002.png" type="Texture" id=46]
[ext_resource path="res://asset/player/png/Jump_Attack__003.png" type="Texture" id=47]
[ext_resource path="res://asset/player/png/Jump_Attack__001.png" type="Texture" id=48]
[ext_resource path="res://asset/player/png/Jump_Attack__000.png" type="Texture" id=49]
[ext_resource path="res://asset/player/png/Jump_Attack__004.png" type="Texture" id=50]
[ext_resource path="res://asset/player/png/Jump_Attack__008.png" type="Texture" id=51]
[ext_resource path="res://asset/player/png/Slide__007.png" type="Texture" id=52]
[ext_resource path="res://asset/player/png/Slide__001.png" type="Texture" id=53]
[ext_resource path="res://asset/player/png/Slide__004.png" type="Texture" id=54]
[ext_resource path="res://asset/player/png/Slide__000.png" type="Texture" id=55]
[ext_resource path="res://asset/player/png/Slide__006.png" type="Texture" id=56]
[ext_resource path="res://asset/player/png/Slide__008.png" type="Texture" id=57]
[ext_resource path="res://asset/player/png/Slide__009.png" type="Texture" id=58]
[ext_resource path="res://asset/player/png/Slide__005.png" type="Texture" id=59]
[ext_resource path="res://asset/player/png/Slide__002.png" type="Texture" id=60]
[ext_resource path="res://asset/player/png/Slide__003.png" type="Texture" id=61]
[ext_resource path="res://asset/player/png/Dead__002.png" type="Texture" id=62]
[ext_resource path="res://asset/player/png/Dead__008.png" type="Texture" id=63]
[ext_resource path="res://asset/player/png/Dead__005.png" type="Texture" id=64]
[ext_resource path="res://asset/player/png/Dead__003.png" type="Texture" id=65]
[ext_resource path="res://asset/player/png/Dead__009.png" type="Texture" id=66]
[ext_resource path="res://asset/player/png/Dead__004.png" type="Texture" id=67]
[ext_resource path="res://asset/player/png/Dead__001.png" type="Texture" id=68]
[ext_resource path="res://asset/player/png/Dead__000.png" type="Texture" id=69]
[ext_resource path="res://asset/player/png/Dead__006.png" type="Texture" id=70]
[ext_resource path="res://asset/player/png/Dead__007.png" type="Texture" id=71]
[ext_resource path="res://asset/player/png/Glide_006.png" type="Texture" id=72]
[ext_resource path="res://asset/player/png/Glide_004.png" type="Texture" id=73]
[ext_resource path="res://asset/player/png/Glide_001.png" type="Texture" id=74]
[ext_resource path="res://asset/player/png/Glide_003.png" type="Texture" id=75]
[ext_resource path="res://asset/player/png/Glide_000.png" type="Texture" id=76]
[ext_resource path="res://asset/player/png/Glide_007.png" type="Texture" id=77]
[ext_resource path="res://asset/player/png/Glide_008.png" type="Texture" id=78]
[ext_resource path="res://asset/player/png/Glide_009.png" type="Texture" id=79]
[ext_resource path="res://asset/player/png/Glide_002.png" type="Texture" id=80]
[ext_resource path="res://asset/player/png/Glide_005.png" type="Texture" id=81]
[ext_resource path="res://asset/player/png/Throw__005.png" type="Texture" id=82]
[ext_resource path="res://asset/player/png/Throw__001.png" type="Texture" id=83]
[ext_resource path="res://asset/player/png/Throw__003.png" type="Texture" id=84]
[ext_resource path="res://asset/player/png/Throw__004.png" type="Texture" id=85]
[ext_resource path="res://asset/player/png/Throw__007.png" type="Texture" id=86]
[ext_resource path="res://asset/player/png/Throw__009.png" type="Texture" id=87]
[ext_resource path="res://asset/player/png/Throw__008.png" type="Texture" id=88]
[ext_resource path="res://asset/player/png/Throw__006.png" type="Texture" id=89]
[ext_resource path="res://asset/player/png/Throw__000.png" type="Texture" id=90]
[ext_resource path="res://asset/player/png/Throw__002.png" type="Texture" id=91]
[ext_resource path="res://src/Actor/Player/SpawnKunai.gd" type="Script" id=92]
[ext_resource path="res://asset/player/png/Jump_Throw__008.png" type="Texture" id=93]
[ext_resource path="res://asset/player/png/Jump_Throw__004.png" type="Texture" id=94]
[ext_resource path="res://asset/player/png/Jump_Throw__005.png" type="Texture" id=95]
[ext_resource path="res://asset/player/png/Jump_Throw__003.png" type="Texture" id=96]
[ext_resource path="res://asset/player/png/Jump_Throw__009.png" type="Texture" id=97]
[ext_resource path="res://asset/player/png/Jump_Throw__006.png" type="Texture" id=98]
[ext_resource path="res://asset/player/png/Jump_Throw__002.png" type="Texture" id=99]
[ext_resource path="res://asset/player/png/Jump_Throw__007.png" type="Texture" id=100]
[ext_resource path="res://asset/player/png/Jump_Throw__001.png" type="Texture" id=101]
[ext_resource path="res://asset/player/png/Jump_Throw__000.png" type="Texture" id=102]
[ext_resource path="res://src/Actor/Player/HealthBar.tscn" type="PackedScene" id=103]
[ext_resource path="res://src/UserInterface/GameOver/GameOver.tscn" type="PackedScene" id=104]
[ext_resource path="res://src/UserInterface/Pause/Pause.tscn" type="PackedScene" id=105]
[ext_resource path="res://asset/sound_effect/throw.wav" type="AudioStream" id=106]
[ext_resource path="res://asset/control/Direction.png" type="Texture" id=107]
[ext_resource path="res://asset/control/BasicAttack.png" type="Texture" id=108]
[ext_resource path="res://asset/control/Slide.png" type="Texture" id=109]
[ext_resource path="res://asset/control/Glide.png" type="Texture" id=110]
[ext_resource path="res://asset/control/Jump.png" type="Texture" id=111]
[ext_resource path="res://asset/control/Throw.png" type="Texture" id=112]
[ext_resource path="res://asset/control/Dash.png" type="Texture" id=113]
[ext_resource path="res://asset/control/BasicAttack-Active.png" type="Texture" id=114]
[ext_resource path="res://asset/control/Throw-Active.png" type="Texture" id=115]
[ext_resource path="res://asset/control/Jump-Active.png" type="Texture" id=116]
[ext_resource path="res://asset/control/Glide-Active.png" type="Texture" id=117]
[ext_resource path="res://asset/control/Dash-Active.png" type="Texture" id=118]
[ext_resource path="res://asset/control/Slide-Active.png" type="Texture" id=119]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 15 ), ExtResource( 20 ), ExtResource( 11 ), ExtResource( 22 ), ExtResource( 26 ), ExtResource( 30 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": false,
"name": "Jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 90 ), ExtResource( 83 ), ExtResource( 91 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 82 ), ExtResource( 89 ), ExtResource( 86 ), ExtResource( 88 ), ExtResource( 87 ) ],
"loop": true,
"name": "Throw",
"speed": 15.0
}, {
"frames": [ ExtResource( 55 ), ExtResource( 53 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 54 ), ExtResource( 59 ), ExtResource( 56 ), ExtResource( 52 ), ExtResource( 57 ), ExtResource( 58 ) ],
"loop": true,
"name": "Slide",
"speed": 10.0
}, {
"frames": [ ExtResource( 76 ), ExtResource( 74 ), ExtResource( 80 ), ExtResource( 75 ), ExtResource( 73 ), ExtResource( 81 ), ExtResource( 72 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ) ],
"loop": true,
"name": "Glide",
"speed": 15.0
}, {
"frames": [ ExtResource( 102 ), ExtResource( 101 ), ExtResource( 99 ), ExtResource( 96 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 98 ), ExtResource( 100 ), ExtResource( 93 ), ExtResource( 97 ) ],
"loop": true,
"name": "JumpThrow",
"speed": 18.0
}, {
"frames": [ ExtResource( 69 ), ExtResource( 68 ), ExtResource( 62 ), ExtResource( 65 ), ExtResource( 67 ), ExtResource( 64 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 63 ), ExtResource( 66 ) ],
"loop": false,
"name": "Dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 18 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 25 ) ],
"loop": true,
"name": "Run",
"speed": 15.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 48 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 50 ), ExtResource( 44 ), ExtResource( 43 ), ExtResource( 45 ), ExtResource( 51 ), ExtResource( 42 ) ],
"loop": true,
"name": "JumpAttack",
"speed": 15.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 32 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ) ],
"loop": true,
"name": "Attack",
"speed": 15.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64.6468, 220.026 )

[sub_resource type="CircleShape2D" id=3]
radius = 32.0

[sub_resource type="CircleShape2D" id=4]
radius = 32.0

[sub_resource type="CircleShape2D" id=5]
radius = 32.0

[sub_resource type="CircleShape2D" id=6]
radius = 32.0

[sub_resource type="CircleShape2D" id=7]
radius = 32.0

[sub_resource type="CircleShape2D" id=8]
radius = 32.0

[sub_resource type="CircleShape2D" id=9]
radius = 32.0

[sub_resource type="CircleShape2D" id=10]
radius = 64.0

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.2, 0.2 )
z_index = 1
collision_mask = 68
script = ExtResource( 41 )
__meta__ = {
"_edit_horizontal_guides_": [ 40.1877 ]
}

[node name="PlatformerDetector" type="RayCast2D" parent="."]
position = Vector2( 0, 203.784 )
enabled = true
collision_mask = 64

[node name="AnimatedPlayer" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"

[node name="SpawnKunai" type="Position2D" parent="AnimatedPlayer"]
position = Vector2( 174.377, 0 )
script = ExtResource( 92 )

[node name="Cooldown" type="Timer" parent="AnimatedPlayer/SpawnKunai"]
wait_time = 1.5
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.11896, -16.4593 )
shape = SubResource( 2 )

[node name="AreaAttack" type="Area2D" parent="."]
collision_mask = 2

[node name="CollAttack" type="CollisionPolygon2D" parent="AreaAttack"]
polygon = PoolVector2Array( 49.8756, -193.307, 94.0227, -195.409, 143.425, -183.846, 197.032, -151.262, 228.566, -119.728, 249.588, -82.9389, 263.253, -42.9963, 268.509, 3.25294, 260.1, 51.6045, 243.282, 98.9049, 215.953, 134.643, 179.163, 165.126, 140.272, 185.097, 102.432, 193.506, 60.3868, 196.659, 49.8756, 196.659 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )
process_mode = 0
limit_left = 0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="StompTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="UserInterface" type="CanvasLayer" parent="."]

[node name="HealthBar" parent="UserInterface" instance=ExtResource( 103 )]

[node name="GameOver" parent="UserInterface" instance=ExtResource( 104 )]
visible = false

[node name="Pause" parent="UserInterface" instance=ExtResource( 105 )]
visible = false

[node name="ControlUI" type="CanvasLayer" parent="."]

[node name="Right" type="TouchScreenButton" parent="ControlUI"]
position = Vector2( 107.799, 373.11 )
normal = ExtResource( 107 )
shape = SubResource( 3 )
action = "move_right"
visibility_mode = 1

[node name="Left" type="TouchScreenButton" parent="ControlUI"]
position = Vector2( 96.7863, 439.781 )
rotation = 3.14159
normal = ExtResource( 107 )
shape = SubResource( 4 )
action = "move_left"
visibility_mode = 1

[node name="Jump" type="TouchScreenButton" parent="ControlUI"]
position = Vector2( 764.051, 249.549 )
normal = ExtResource( 111 )
pressed = ExtResource( 116 )
shape = SubResource( 5 )
passby_press = true
action = "jump"
visibility_mode = 1

[node name="Throw" type="TouchScreenButton" parent="ControlUI"]
position = Vector2( 620.736, 318.945 )
normal = ExtResource( 112 )
pressed = ExtResource( 115 )
shape = SubResource( 6 )
passby_press = true
action = "throw"
visibility_mode = 1

[node name="Glide" type="TouchScreenButton" parent="ControlUI"]
position = Vector2( 685.535, 274.821 )
normal = ExtResource( 110 )
pressed = ExtResource( 117 )
shape = SubResource( 7 )
passby_press = true
action = "glide"
visibility_mode = 1

[node name="Slide" type="TouchScreenButton" parent="ControlUI"]
position = Vector2( 624.639, 391.961 )
normal = ExtResource( 109 )
pressed = ExtResource( 119 )
shape = SubResource( 8 )
action = "slide"
visibility_mode = 1

[node name="Dash" type="TouchScreenButton" parent="ControlUI"]
position = Vector2( 548.271, 392.852 )
normal = ExtResource( 113 )
pressed = ExtResource( 118 )
shape = SubResource( 9 )
action = "dash"
visibility_mode = 1

[node name="BasicAttack" type="TouchScreenButton" parent="ControlUI"]
position = Vector2( 708.455, 335.531 )
normal = ExtResource( 108 )
pressed = ExtResource( 114 )
shape = SubResource( 10 )
passby_press = true
action = "attack"
visibility_mode = 1

[node name="ThrowEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 106 )

[node name="JumpEffect" type="AudioStreamPlayer2D" parent="."]
[connection signal="body_entered" from="AreaAttack" to="." method="_on_AreaAttack_body_entered"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="StompTimer" to="." method="_on_StompTimer_timeout"]
